tests/errors/parameter_declared.f90
program parameter_declared
    implicit real(a-h, o-z)
    parameter (a = 3.14)
    print *, a
end program